syntax = "proto3";

package transfer;

import "api.proto";
import "common.proto";

// ImportRequest is used to import configurations.
message ImportRequest {
  repeated common.ResourceConfig configs = 1;
  bool overwrite = 2;
}

// ImportSummaryItem represents a single item in the import summary.
message ImportSummaryItem {
  string resource_key = 1;
  string environment_key = 2;
  string pipeline_key = 3;
  string name = 4;
  string alias = 5;
  string type = 6;
}

// ImportSummary contains summary information for import operations.
message ImportSummary {
  int32 total = 1;
  repeated string environment_keys = 2;
  repeated string pipeline_keys = 3;
  repeated ImportSummaryItem items = 4;
}

// ImportResponse is a response for import operations.
message ImportResponse {
  int32 code = 1;
  string msg = 2;
  string error = 3;
  ImportSummary summary = 4;
}

// ExportRequest is used to export configurations.
message ExportRequest {
  string environment_key = 1;
  string pipeline_key = 2;
  string format = 3; // json, zip, static
}

// ExportResponse contains exported configurations.
message ExportResponse {
  repeated common.ResourceConfig list = 1;
}

// TransferService handles import and export operations.
service TransferService {
  // Import imports configurations from a request or ZIP archive.
  // Note: This endpoint accepts both JSON and multipart/form-data.
  rpc Import(ImportRequest) returns (ImportResponse) {
    option (api.post) =  "/api/v1/transfer/import";
  }

  // Export exports configurations in various formats.
  // Use format query param: json (default), zip, static
  rpc Export(ExportRequest) returns (ExportResponse) {
    option (api.get) = "/api/v1/transfer/export";
  }
}
